# bakalari-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile.cli  Dockerfile.http  Dockerfile.proxy  LICENSE  README.md  build-all.sh  build-cli.sh  build-http.sh  build-proxy.sh  build.sh  docker-compose.yml  example_usage.py  main.py  main_http.py  pyproject.toml  start.sh
.github/workflows/: docker-build.yml
src/bakalari_mcp_server/: __init__.py  server.py  server_http.py
